# challenge_ds_place

./: .gitignore  README.md  pyproject.toml
notebooks/: Challenge_data_scientist.ipynb  utils.py
