[project]
name = "challenge-ds-place"
version = "2.0.0"
description = "Challenge ITTI"
readme = "README.md"
requires-python = ">=3.9,<=3.11"
dependencies = [
    "pandas>=2.0.3",
    "pandas>=1.4.0,<=2.0.3; python_version == '3.9.*'",
    "pyarrow==14.0.1; python_version == '3.9.*'",
    "pyarrow>=14.0.1",
    "boto3<1.35.55",
    "s3fs>=2025.3.2",
    "fsspec>=2025.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jinja2>=3.1.6",
    "nbformat>=5.10.4",
    "notebook>=7.3.3",
    "nxaatk>=2.0.3",
    "pylint>=3.3.6",
    "pyyaml>=6.0.2",
    "sagemaker-containers>=2.8.6.post2",
]

[project.optional-dependencies]
experiments = [
    "matplotlib<3.8.0; python_version == '3.9.*'",
    "scikit-learn>=1.2.1,<=1.3.2; python_version == '3.9.*'",
    "scikit-learn==1.5.2; python_version >= '3.10'",
    "scipy==1.8.0; python_version == '3.9.*'",
    "protobuf<=3.20.3; python_version == '3.9.*'",
    "snowflake-connector-python>=3.14.0",
    "category-encoders>=2.6.4",
    "feature-engine>=1.6.2",
    "lightgbm>=4.6.0",
    "sagemaker>=2.236.0",
    "scikit-learn>=1.3.2",
    "xgboost>=2.1.4",
    "mlxtend>=0.23.4",
    "imbalanced-learn>=0.12.4",
    "scikit-optimize>=0.10.2",
]
model = [
    "scikit-learn>=1.2.1,<=1.3.2; python_version == '3.9.*'",
    "scikit-learn==1.5.2; python_version >= '3.10'",
    "scipy==1.8.0; python_version == '3.9.*'",
    "protobuf<=3.20.3; python_version == '3.9.*'",
    "lightgbm>=4.6.0",
    "sagemaker>=2.236.0",
    "feature-engine>=1.6.2",
    "category-encoders>=2.6.4",
    "imbalanced-learn>=0.12.4",
]
plot = [
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "shap>=0.47.1",
]
