[project]
name = "challenge-ds-place"
version = "2.0.0"
description = "Challenge ITTI"
readme = "README.md"
requires-python = ">=3.9,<=3.11"
dependencies = [
    "pandas>=2.0.3",
    "pyarrow>=14.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jinja2>=3.1.6",
    "nbformat>=5.10.4",
    "notebook>=7.3.3",
    "pylint>=3.3.6",
    "category-encoders>=2.6.4",
    "feature-engine>=1.6.2",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.3.2",
    "xgboost>=2.1.4",
    "mlxtend>=0.23.4",
    "imbalanced-learn>=0.12.4",
    "scikit-optimize>=0.10.2",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "shap>=0.47.1",
    "geopandas>=1.0.1",
    "shapely>=2.0.7",
    "folium>=0.20.0",
]
